# otel-demo

./: compose.yaml  otel-config.yaml  tempo.yaml
simple-test/: Dockerfile  Dockerfile.hybrid  pyproject.toml  server-hybrid.py  server.py
