[tool.poetry]
name = "simple-test"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
opentelemetry-distro = "^0.44b0"
flask = "^3.0.2"
opentelemetry-exporter-otlp = "^1.23.0"
opentelemetry-instrumentation-flask = "^0.44b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
